# wemos-bridge-server

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_i2_c_client-members.html  class_i2_c_client.html  class_i2_c_client.js  class_i2_c_client__coll__graph.map  class_i2_c_client__coll__graph.md5  class_slave_manager-members.html  class_slave_manager.html  class_slave_manager.js  class_slave_manager__coll__graph.map  class_slave_manager__coll__graph.md5  class_wemos_server-members.html  class_wemos_server.html  class_wemos_server.js  class_wemos_server__coll__graph.map  class_wemos_server__coll__graph.md5  classes.html  dir_000001_000000.html  dir_000002_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+184 more)
.github/workflows/: build.yml  ci.yml  docs.yml
include/: i2cclient.h  math.h  packets.h  slavemanager.h  wemosserver.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  files_0.js  files_1.js  (+36 more)
src/: i2cclient.cpp  main.cpp  math.cpp  slavemanager.cpp  wemosserver.cpp
tests/: CMakeLists.txt  test_i2cclient.cpp  test_math.cpp  test_slavemanager.cpp  test_wemosserver.cpp
